published version 1.0.0 on PYPI

--- a/mepextract/pyproject.toml
+++ b/mepextract/pyproject.toml
@@ -1,12 +1,12 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "numpy", "open-ephys-python-tools", "matplotlib", "scipy", "pandas"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "mepextract"
-description = "A quick way to extract MEPs from continuous data"
 version = "1.0.0"
-readme = "README.md"
+license = {text = "MIT"}
+description = "A quick way to extract MEPs from continuous data"
 authors = [
     { name = "Aswinshankar Sivalingam", email = "shankar.01@icloud.com" }
 ]
@@ -15,5 +15,18 @@ dependencies = [
     "open-ephys-python-tools",
     "matplotlib",
     "scipy",
-    "pandas",
+    "pandas"
 ]
+readme = "README.md"
+requires-python = ">=3.8"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent"
+]
+
+[project.urls]
+Homepage = "https://github.com/raknah/motor-evoked-potentials-analysis"
+
+[tool.setuptools.packages.find]
+where = ["extracting"]
