--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,84 @@
 [build-system]
-requires = ["setuptools>=61", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "motor-evoked-potentials"
+name = "openephysextract"
 version = "0.1.0"
-description = "Tools for conveniently extracting and analysing openephys data"
-authors = [
-    { name = "Aswinshankar Sivalingam", email = "shankar.01@icloud.com" }
-]
+description = "Tools for extracting and analyzing neuroelectrophysiology data from Open Ephys recordings"
 readme = "README.md"
-license = { text = "MIT" }  # or whatever your LICENSE.txt says
+license = {file = "LICENSE.txt"}
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Scientific/Engineering :: Medical Science Apps.",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+]
+keywords = ["neuroscience", "electrophysiology", "data-analysis", "open-ephys", "eeg", "meg", "signal-processing"]
 requires-python = ">=3.8"
 
-# Add your core package dependencies here
+# Core dependencies based on actual imports in the codebase
 dependencies = [
-    "numpy",
-    "pandas",
-    "tqdm",
-    "scipy",       # optional, remove if unused
-    "matplotlib",  # optional, remove if unused
+    "numpy>=1.20.0",
+    "scipy>=1.7.0",
+    "h5py>=3.0.0",
+    "pandas>=1.3.0",
+    "matplotlib>=3.5.0",
+    "open-ephys-python-tools>=0.1.0",
+    "tqdm>=4.60.0",
+    "dill>=0.3.0",
+    "scikit-learn>=1.0.0",
+    "torch>=1.10.0",
+]
+
+[project.optional-dependencies]
+# Interactive plotting and dashboards
+interactive = [
+    "dash>=2.0.0",
+    "plotly>=5.0.0",
+    "ipywidgets>=7.6.0",
+]
+
+# Development tools
+dev = [
+    "pytest>=6.0",
+    "pytest-cov",
+    "black",
+    "flake8",
+    "mypy",
+    "jupyter",
+    "ipython",
+]
+
+# Full installation with all features
+all = [
+    "openephysextract[interactive,dev]"
 ]
 
 [project.urls]
-Homepage = "https://github.com/raknah/motor-evoked-potentials-analysis"
+Homepage = "https://github.com/yourusername/neuroelectrophysiology"
+Documentation = "https://github.com/yourusername/neuroelectrophysiology#readme"
+Repository = "https://github.com/yourusername/neuroelectrophysiology.git"
+Issues = "https://github.com/yourusername/neuroelectrophysiology/issues"
 
 [tool.setuptools.packages.find]
-where = ["."]
 include = ["openephysextract*"]
+
+[tool.black]
+line-length = 88
+target-version = ['py38']
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
