--- a/Project.toml
+++ b/Project.toml
@@ -7,4 +7,5 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+UnfoldMakie = "69a5ce3b-64fb-4f22-ae69-36dd4416af2a"
 Wavelets = "29a6e085-ba6d-5f35-a997-948ac2efa89a"
